<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentHomeFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view_tag"
        android:name="com.example.connectfit.HeaderComponentFragment"
        android:layout_width="414dp"
        android:layout_height="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_header_component" />

    <ImageButton
        android:id="@+id/imageButtonMyTraining"
        android:contentDescription="training"
        android:layout_width="159dp"
        android:layout_height="157dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="10dp"
        android:background="#8C52FF"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_view_tag"
        android:src="@drawable/mytrainning" />


    <ImageButton
        android:id="@+id/imageButtonLogout"
        android:layout_width="159dp"
        android:layout_height="157dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="124dp"
        android:background="#8C52FF"
        android:contentDescription="logout"
        android:scaleType="fitCenter"
        android:src="@drawable/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonSettings"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonSearch" />

    <ImageButton
        android:id="@+id/imageButtonSearch"
        android:contentDescription="search"
        android:layout_width="159dp"
        android:layout_height="157dp"
        android:background="#8C52FF"
        android:layout_marginStart="31dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="37dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonMyTraining"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_view_tag"
        android:src="@drawable/search" />

</androidx.constraintlayout.widget.ConstraintLayout>