...
                android:layout_width="wrap_content"
                android:layout_height="48dp" />
        </LinearLayout>


        <Button
            android:id="@+id/changeScreenFromSigninToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="#232222"
            android:text="Já possui uma conta? Entre!"
            android:textColor="#ffffff" />
...
